<resources>
    <!-- Credenciales Aplicativo-->
    <string name="app_name">ProyectoDAM</string>
    <string name="Developer">Cesar Zalamea</string>
    <string name="desarrollado">Desarrollado por: </string>
    <string name="version">Version 1.0</string>
    <string name="logo_proyecto">Logo Proyecto</string>
    <string name="Registrese">Registro</string>
    <string name="Cedula">Cedula</string>
    <string name="Nombres">Nombres</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Edad">Edad</string>
    <string name="Nacionalidad">Nacionalidad</string>
    <string name="Genero">Genero</string>
    <string name="Estado_Civil">Estado Civil</string>
    <string name="Fecha_Nacimiento">Fecha Nacimiento</string>
    <string name="Nivel_Ingles">Nivel de Ingles</string>

    <!-- Opciones para el Spinner de Nacionalidad -->
    <string-array name="nacionalidad_array">
        <item>Ecuatoriana</item>
        <item>Colombiana</item>
        <item>Peruana</item>
        <item>Argentina</item>
        <item>Mexicana</item>
        <!-- Agrega más nacionalidades si es necesario -->
    </string-array>

    <string-array name="genero_array">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>

    <!-- LOGIN-->
    <string name="titulo_login">Ingrese sesion</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="txt_usuario">Ingrese su usuario</string>
    <string name="lbl_clave">Clave</string>
    <string name="txt_clave">Ingrese su clave</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="lbl_crear_cuenta">No tienes cuenta? Registrese</string>

</resources>